# assetmanagmentwithgooletest

assetgtest/: CMakeLists.txt  main.cpp
assetgtest/AssetData/: AssetManagerInterface.h  CMakeLists.txt  Image.qrc  assetmainwindow.cpp  assetmainwindow.h  assetmainwindow.ui  assetmanagerinformation.cpp  assetmanagerinformation.h  assetrecord.cpp  assetrecord.h  assetrecord.ui  assetreport.cpp  assetreport.h
assetgtest/AssetData/test/: AssetmanagmentDb_test.cpp  CMakeLists.txt  main.cpp
assetgtest/AssetDataBase/: AssetManagerDBServiceInterface.h  CMakeLists.txt  assetmanagerdbservice.cpp  assetmanagerdbservice.h
